fix horizontal scroll + fix badges

--- a/assets/scss/components/_modal.scss
+++ b/assets/scss/components/_modal.scss
@@ -52,7 +52,7 @@
 
 .c-modal__body {
   padding: 1em;
-  overflow-y: auto;
+  overflow: hidden auto;
 }
 
 .c-modal__footer {
